--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ numpysane==0.35
 packaging==23.0
 Pillow==9.4.0
 pluggy==1.0.0
+prettytable==3.6.0
 pyparsing==3.0.9
 pytest==7.2.1
 python-dateutil==2.8.2
